# wordle

./: .gitignore  Cargo.toml  solver.py
examples/gui/: Cargo.toml  index.html
examples/gui/src/: keyboard.rs  main.rs  style.rs
examples/solver/: Cargo.toml
examples/solver/src/: main.rs
examples/term/: Cargo.toml
examples/term/src/: main.rs
exploring/: solver.py
src/: auto.rs  gui.rs  lib.rs  main.rs  solver.rs  user_game.rs
src/logic/: game.rs  mod.rs  mutator.rs  params.rs  solver.rs  state.rs  types.rs  wordle.rs
src/solver/: entropy.rs  filters.rs  mod.rs  positional.rs  scoring.rs  solvers.rs
words/: sample.txt
