[package]
name = "jordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors="3.2.0"
anyhow = "*"
rand = "*"
indicatif = "0.16.2"

[[bin]]
name = "jordle"
path = "src/user_game.rs"

[[bin]]
name = "solver"
path = "src/auto.rs"