[package]
name = "jordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
rand = "*"
rustc-hash = "*"

[lib]
name = "jordle"
path = "src/lib.rs"

[workspace]
members = [
	"examples/gui",
	"examples/term",
	"examples/solver"
]