[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jordle = {path="../.."}
wasm-bindgen = "*"
iced = {version="^0.3.0"}
getrandom = {features=["js"], version="*"}
rand = "*"
web-sys = {features=["console"],version="*"}