[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jordle = {path="../.."}
wasm-bindgen = "0.2.79"
iced = {git="https://github.com/iced-rs/iced", rev="adce9e0421"}
getrandom = {features=["js"], version="*"}
rand = "*"
web-sys = {features=["console"],version="*"}
